fix(docs: color token table): alignment of cells

--- a/packages/web/src/app/doc-pages/other-pages/color/color-token-table/color-token-subtable/color-token-subtable.component.scss
+++ b/packages/web/src/app/doc-pages/other-pages/color/color-token-table/color-token-subtable/color-token-subtable.component.scss
@@ -23,8 +23,8 @@ table {
     padding: 16px 8px;
     vertical-align: top;
 
-    &:first-of-type,
-    &:last-of-type {
+    &:first-child,
+    &:last-child {
       padding: 16px;
     }
 
